culminación del responsive

--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/tablets.css" media="(min-width:760px)">
+    <link rel="stylesheet" href="./css/deckstop.css" media="(min-width:1024px)">
 </head>
 <body>
     
     <header>
         <img src="./assets/logo/logoweb.gif" alt="" class="logo">
         <div class="container-menu"></div>
+        <nav class="nav-descktop">
+            <ul>
+                <li>home</li>
+                <li>about us</li>
+                <li>portafolio</li>
+                <li>contactanos</li>
+            </ul>
+        </nav>
     </header>
 
 
@@ -57,7 +67,7 @@
             <label for=""></label>
             <input type="number" id="" name="" placeholder="Numero de contacto:">
 
-            <button type="submit">Submit <span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
+            <button type="submit">enviar <span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
         </form>
         </section>
     </div>
@@ -84,8 +94,8 @@
             </picture>
             <div class="section-three--paragraf">
                 <h2>explora nuestros servicios de <span>mudanza y transporte</span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, consectetur, voluptatibus sed illo voluptatum dolore assumenda exercitationem est praesentium nobis amet ipsa omnis at accusantium officiis minus error.</p>
-                <button>portfolio</button>
+                <p>Explora la excelencia en cada mudanza. Echa un vistazo a nuestro portafolio  ¡Inspírate ahora!</p>
+                <button>portafolio</button>
             </div>
         </section>
     </section>
@@ -94,7 +104,7 @@
 
     <section class="section-four">
         <section class="section-four--container">
-            <h3>Lorem.</h3>
+            <h3>¿como lo hacemos?</h3>
             <div class="title-section--four">
                 <h2>planifica tu mudanza</h2>
                 <span></span>
@@ -144,6 +154,36 @@
             </div>
         </serction>
     </section>
+
+    <!-- footer -->
+    
+    <section class="section-six" id="footer">
+        <footer class="section-six--footer">
+            <section class="section-six--redes">
+                <img src="./assets/logo/logoFooter.gif" alt="" id="logo-footer">
+            </section>
+            <div class="section-six--container">
+                <article>
+                    <h3><span></span>Contact Us</h3>
+                    <p><span></span>continental de transportes</p>
+                    <p><span></span>info@continentaldetrasteos.com</p>
+                    <p><span></span>601 633 4466 </p>
+                    <p><span></span>601 563 0428</p>
+                    <p><span></span>(+57) 3115386102 </p>
+                </article>
+                <article>
+                    <h3><span></span>Servicios</h3>
+                    <p><span></span>Transporte eficiente</p>
+                    <p><span></span>Planificación</p>
+                    <p><span></span>Embalaje</p>
+                </article>
+            </div>
+        </footer>
+        <div class="footer-two">
+            <p>© 2023 by agencia de lo mejor | Fabian silva dev.</p>
+        </div>
+    </section>
+
 
 
     </main>
