--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <input type="text" id="" name="hasta" placeholder="Transporte hasta:">
             
             <label for=""></label>
-            <input type="date" id="fecha" name="" placeholder="fecha de mudanza">
+            <input type="text" id="fecha" name="" placeholder="Fecha DD/MM/AAA">
             
             <label for=""></label>
             <input type="text" id="" name="" placeholder="Nombre:">
@@ -67,7 +67,7 @@
             <label for=""></label>
             <input type="number" id="" name="" placeholder="Numero de contacto:">
 
-            <button type="submit">enviar <span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
+            <button type="submit">cotizar<span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
         </form>
         </section>
     </div>
@@ -135,9 +135,8 @@
                 <h2>Comentarios de nuestros clientes</h2>
                 <span></span>
                 <div>
-                    <h4>9.5 / 10</h4>
                     <p>Nuestros clientes nos califican como excelentes.
-                        Obtuvimos una puntuación de 9,1/10, según 100 reseñas.</p>
+                        Obtuvimos una puntuación de 10/10, según 100 reseñas.</p>
                 </div>
             </div>
             <div class="section-six--testimonials">
@@ -185,7 +184,25 @@
     </section>
 
 
+    <!-- modal-popup -->
+        <div class="window-background" id="window-background">
+            <div class="window-container" id="window-container">
+                <button class="close-button" id="close-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>
+                </button>
+                <h2 id="titleModal">hola</h2>
+                <p id="paragrafModal">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quos aliquam autem voluptatibus velit perspiciatis!</p>
+                <button class="button-info--modal">mas información</button>
+            </div>
+        </div>
 
+    <!-- button of whatsapp -->
+
+    <div class="button-whatsApp">
+        <span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"><path fill="#FFF" fill-rule="evenodd" clip-rule="evenodd" d="M18.403 5.633A8.919 8.919 0 0 0 12.053 3c-4.948 0-8.976 4.027-8.978 8.977 0 1.582.413 3.126 1.198 4.488L3 21.116l4.759-1.249a8.981 8.981 0 0 0 4.29 1.093h.004c4.947 0 8.975-4.027 8.977-8.977a8.926 8.926 0 0 0-2.627-6.35m-6.35 13.812h-.003a7.446 7.446 0 0 1-3.798-1.041l-.272-.162-2.824.741.753-2.753-.177-.282a7.448 7.448 0 0 1-1.141-3.971c.002-4.114 3.349-7.461 7.465-7.461a7.413 7.413 0 0 1 5.275 2.188 7.42 7.42 0 0 1 2.183 5.279c-.002 4.114-3.349 7.462-7.461 7.462m4.093-5.589c-.225-.113-1.327-.655-1.533-.73-.205-.075-.354-.112-.504.112s-.58.729-.711.879-.262.168-.486.056-.947-.349-1.804-1.113c-.667-.595-1.117-1.329-1.248-1.554s-.014-.346.099-.458c.101-.1.224-.262.336-.393.112-.131.149-.224.224-.374s.038-.281-.019-.393c-.056-.113-.505-1.217-.692-1.666-.181-.435-.366-.377-.504-.383a9.65 9.65 0 0 0-.429-.008.826.826 0 0 0-.599.28c-.206.225-.785.767-.785 1.871s.804 2.171.916 2.321c.112.15 1.582 2.415 3.832 3.387.536.231.954.369 1.279.473.537.171 1.026.146 1.413.089.431-.064 1.327-.542 1.514-1.066.187-.524.187-.973.131-1.067-.056-.094-.207-.151-.43-.263"></path></svg>
+        </span>
+    </div>
     </main>
 
     <script src="./src/javascript/index.js"></script>
