--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continental De Trasteos | home</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/tablets.css" media="(min-width:760px)">
+    <link rel="stylesheet" href="./css/deckstop.css" media="(min-width:1024px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/tablets.css" media="(min-width:760px)">
-    <link rel="stylesheet" href="./css/deckstop.css" media="(min-width:1024px)">
 </head>
 <body>
     
@@ -24,6 +24,7 @@
                 <li>home</li>
                 <li>about us</li>
                 <li>portafolio</li>
+                <li>testimonials</li>
                 <li>contactanos</li>
             </ul>
         </nav>
@@ -50,7 +51,7 @@
 
     <div class="section-one--form">
         <section>
-        <form action="">
+        <form action="" class="form">
 
             <label for=""></label>
             <input type="text" id="desde" name="desde" placeholder="Transportar desde:">
@@ -121,7 +122,7 @@
         <section class="section-five--container">
             <div class="section-five--info">
                 <h2>Tu mudanza perfecta, cotiza ahora.</h2>
-                <button>obtener cotización</button>
+                <button type="button" class="quote">obtener cotización</button>
             </div>
         </section>
     </section>
@@ -207,5 +208,7 @@
     </main>
 
     <script src="./src/javascript/index.js"></script>
+
+
 </body>
 </html>
