--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="container-menu"></div>
         <nav class="nav-descktop">
             <ul>
-                <li>home</li>
+                <li class="home">home</li>
                 <li>about us</li>
                 <li>portafolio</li>
-                <li>testimonials</li>
-                <li>contactanos</li>
+                <li class="testimonials">testimonials</li>
+                <li class="contactHeader">contactanos</li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,7 @@
 
     <!-- section-one -->
 
-    <section class="section-one">
+    <section class="section-one" id="section-one">
         <section class="section-one--container">
             <div class="title-section--one">
                 <h1>mudanza<span><br>& transporte</span></h1>
