actualización del diseño responsive y estilos de el form

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <!-- section-six -->
 
-    <section class="section-six">
+    <section class="section-six" id="section-six">
         <serction class="section-six---container">
             <div class="section-six--feedback">
                 <h3>Testimonials</h3>
