actualización y diseño de la pagina de sobre nosotros

--- a/index.html
+++ b/index.html
@@ -16,18 +16,32 @@
 </head>
 <body>
     
-    <header>
-        <img src="./assets/logo/logoweb.gif" alt="" class="logo">
-        <div class="container-menu"></div>
-        <nav class="nav-descktop">
-            <ul>
-                <li class="home">home</li>
-                <li>about us</li>
-                <li>portafolio</li>
-                <li class="testimonials">testimonials</li>
-                <li class="contactHeader">contactanos</li>
-            </ul>
-        </nav>
+        <div class="header-one">
+            <div>
+                <p>(+57) 3115386102</p>
+            </div>
+            <div>
+                <p>Info@Continentaldetrasteos.Com</p>
+            </div>
+            <div>
+                <p>Bogotá / Colombia</p>
+            </div>
+        </div>
+        <header>
+
+        <div class="header-two">
+            <img src="./assets/logo/logoweb.gif" alt="" class="logo">
+            <div class="container-menu"></div>
+            <nav class="nav-descktop">
+                <ul>
+                    <li class="home">home</li>
+                    <li class="aboutUs">about us</li>
+                    <li>portafolio</li>
+                    <li class="testimonials">testimonials</li>
+                    <li class="contactHeader">contactanos</li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
 
