la web esta en un 95% nos falta crear el menu mobile, y el correo corporativo

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -36,19 +36,16 @@
             <div class="container-menu"></div>
             <nav class="nav-descktop">
                 <ul>
-                    <li class="home">home</li>
-                    <li>about us</li>
-                    <li>portafolio</li>
-                    <li class="testimonials">testimonials</li>
-                    <li class="contactHeader">contactanos</li>
+                    <li id="home">home</li>
+                    <li id="portfolio">portafolio</li>
+                    <li id="testimonials">testimonials</li>
+                    <li id="contact">contactanos</li>
                 </ul>
             </nav>
         </div>
         </header>
 
-
     <main>
-
 
     <!-- sobreno sotros -->
 
@@ -81,7 +78,10 @@
                 <h3>quienes somos</h3>
                 <h2>proporcionamos un conjunto <span>completo de servicios</span></h2>
                 <div></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, iusto.</p>
+                <p>Con más de 26 años de experiencia, brindamos servicios de mudanzas y traslado de muebles a nivel urbano y nacional. Nos distinguimos por nuestra seriedad, cumplimiento, honradez y dedicación en cada compromiso con nuestros apreciados clientes.</p>
+                <button type="button" id="button-">
+                    cotiza con nosotros
+                </button>
             </article>
         </section>
     </section>
