--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Atención personalizada, transporte confiable. Tu mudanza perfecta comienza aquí. ¡Contáctanos hoy!</p>
             </div>
             <picture class="section-one--picture">
-                <img src="./assets/img/mudanza121.png" alt="">
+                <img src="./assets/img/mdweb (1).webp" alt="">
             </picture>
         </section>
     </section>
