creación de la sección del portafolio

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Continental De Trasteos | home</title>
+    <title>Continental De Trasteos | Sobre Nosotros</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/aboutUs.css">
     <link rel="stylesheet" href="../css/tablets.css" media="(min-width:760px)">
