--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li class="home">home</li>
                     <li class="aboutUs">about us</li>
-                    <li>portafolio</li>
+                    <li class="portfolio">portafolio</li>
                     <li class="testimonials">testimonials</li>
                     <li class="contactHeader">contactanos</li>
                 </ul>
