actualización del diseño web ya estamos en un 98%

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Continental De Trasteos | Sobre Nosotros</title>
+    <link rel="icon" href="../assets/logo/logo2.gif" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/aboutUs.css">
     <link rel="stylesheet" href="../css/tablets.css" media="(min-width:760px)">
@@ -17,7 +18,24 @@
     <link rel="stylesheet" href="../assets/">
 </head>
 <body>
-    
+
+    <div class="mobile-menu">
+        <section class="menu-mobile mobile">
+            <section class="menu-mobile--content">
+                <nav>
+                    <ul>
+                        <li class="homeMobile"><span></span>inicio</li>
+                        <li class="portfolioMobile"><span></span>portafolio</li>
+                        <li class="testimonialsMobile"><span></span>testimonios</li>
+                        <li class="contactUsMobile"><span></span>contáctanos</li>
+                    </ul>
+                </nav>
+            </section>
+            <span class="menu-mobile-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" style="fill: #fff;"><path d="M21.842 6.218a1.977 1.977 0 0 0-.424-.628A1.99 1.99 0 0 0 20 5H8c-.297 0-.578.132-.769.359l-5 6c-.309.371-.309.91 0 1.281l5 6c.191.228.472.36.769.36h12a1.977 1.977 0 0 0 1.41-.582A1.99 1.99 0 0 0 22 17V7c0-.266-.052-.525-.158-.782zm-4.135 8.075-1.414 1.414L14 13.414l-2.293 2.293-1.414-1.414L12.586 12l-2.293-2.293 1.414-1.414L14 10.586l2.293-2.293 1.414 1.414L15.414 12l2.293 2.293z"></path></svg></span>
+        </section>
+    </div>
+        
+
         <div class="header-one">
             <div>
                 <p>(+57) 3115386102</p>
@@ -36,12 +54,13 @@
             <div class="container-menu"></div>
             <nav class="nav-descktop">
                 <ul>
-                    <li id="home">home</li>
+                    <li id="home">inicio</li>
                     <li id="portfolio">portafolio</li>
-                    <li id="testimonials">testimonials</li>
-                    <li id="contact">contactanos</li>
+                    <li id="testimonials">testimonios</li>
+                    <li id="contact">contáctanos</li>
                 </ul>
             </nav>
+            <span id="icon-menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" style="fill: #fff;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg></span>
         </div>
         </header>
 
@@ -79,7 +98,7 @@
                 <h2>proporcionamos un conjunto <span>completo de servicios</span></h2>
                 <div></div>
                 <p>Con más de 26 años de experiencia, brindamos servicios de mudanzas y traslado de muebles a nivel urbano y nacional. Nos distinguimos por nuestra seriedad, cumplimiento, honradez y dedicación en cada compromiso con nuestros apreciados clientes.</p>
-                <button type="button" id="button-">
+                <button type="button" id="button-quorer">
                     cotiza con nosotros
                 </button>
             </article>
@@ -101,6 +120,7 @@
                     <p><span></span>601 633 4466 </p>
                     <p><span></span>601 563 0428</p>
                     <p><span></span>(+57) 3115386102 </p>
+                    <p class="Qukies"><span></span>politica de privacidad y tratamiento de datos</p>
                 </article>
                 <article>
                     <h3><span></span>Servicios</h3>
