actualización de recursos y revición final

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -88,16 +88,16 @@
     <section class="section-galery">
         <section class="section-galery--content">
             <picture class="section-galery--pictures">
-                <img src="../assets/img/1.webp" alt="">
-                <img src="../assets/img/5.webp" alt="">
-                <img src="../assets/img/3.webp" alt="">
-                <img src="../assets/img/4.webp" alt="">
+                <img src="../assets/img/8.webp" alt="">
+                <img src="../assets/img/881.webp" alt="">
+                <img src="../assets/img/85.webp" alt="">
+                <img src="../assets/img/882.webp" alt="">
             </picture>
             <article class="section-galer--info">
-                <h3>quienes somos</h3>
+                <h3>¿quienes somos?</h3>
                 <h2>proporcionamos un conjunto <span>completo de servicios</span></h2>
                 <div></div>
-                <p>Con más de 26 años de experiencia, brindamos servicios de mudanzas y traslado de muebles a nivel urbano y nacional. Nos distinguimos por nuestra seriedad, cumplimiento, honradez y dedicación en cada compromiso con nuestros apreciados clientes.</p>
+                <p>Con más de 26 años de experiencia, brindamos servicios de mudanzas y traslado de muebles a nivel urbano y nacional. Nos distinguimos por nuestra seriedad, cumplimiento, honradez y dedicación en cada compromiso con nuestros clientes.</p>
                 <button type="button" id="button-quorer">
                     cotiza con nosotros
                 </button>
