--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <section class="section-one" id="section-one">
         <section class="section-one--container">
             <div class="title-section--one">
-                <h1>mudanza<span><br>& trasteos</span></h1>
-                <p>Atención personalizada, transporte confiable. Tu mudanza perfecta comienza aquí. ¡Contáctanos hoy!</p>
+                <h1>mudanzas<span><br>& trasteos</span></h1>
+                <p>Atención personalizada, transporte confiable. Tu mudanza perfecta comienza AQUÍ. ¡Contáctanos hoy!</p>
             </div>
             <picture class="section-one--picture">
                 <img src="./assets/img/mdweb (1).webp" alt="">
@@ -105,9 +105,9 @@
             <input type="text" id="nombre" name="" placeholder="Nombre:">
             
             <label for=""></label>
-            <input type="number" id="numero" name="" placeholder="Numero de contacto:">
+            <input type="number" id="numero" name="" placeholder="Número de contacto:">
 
-            <button type="button" class="cotiza">cotizar<span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
+            <button type="button" class="cotiza">COTIZAR<span><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24" style="fill: rgba(34, 34, 34, 1);"><path d="m21.426 11.095-17-8A1 1 0 0 0 3.03 4.242l1.212 4.849L12 12l-7.758 2.909-1.212 4.849a.998.998 0 0 0 1.396 1.147l17-8a1 1 0 0 0 0-1.81z"></path></svg></span></button>
         </form>
         </section>
     </div>
@@ -116,7 +116,7 @@
 
     <section class="section-two">
         <section class="section-two--container">
-            <h3 class="what-we-do">¿Que hacemos?</h3>
+            <h3 class="what-we-do">¿Qué hacemos?</h3>
             <section class="title-section--two">
                 <h2>nuestros servicios de <span>mudanza</span></h2>
             </section>
@@ -133,9 +133,9 @@
                 <img src="./assets/img/2.webp" alt="">
             </picture>
             <div class="section-three--paragraf">
-                <h2>explora nuestros servicios de <span>mudanza y transporte</span></h2>
+                <h2>Explora Nuestros Servicios de <span>Mudanza y Transporte</span></h2>
                 <p>Explora la excelencia en cada mudanza. Echa un vistazo a nuestro portafolio  ¡Inspírate ahora!</p>
-                <button type="button" id="buttonQuorer">portafolio</button>
+                <button type="button" id="buttonQuorer">Servicios</button>
             </div>
         </section>
     </section>
@@ -144,7 +144,7 @@
 
     <section class="section-four">
         <section class="section-four--container">
-            <h3>¿como lo hacemos?</h3>
+            <h3>¿Cómo lo hacemos?</h3>
             <div class="title-section--four">
                 <h2>planifica tu mudanza</h2>
                 <span></span>
@@ -175,8 +175,8 @@
                 <h2>Comentarios de nuestros clientes</h2>
                 <span></span>
                 <div>
-                    <p>Nuestros clientes nos califican como excelentes.
-                        Obtuvimos una puntuación de 10/10, según 100 reseñas.</p>
+                    <p>Obtuvimos una puntuación de 5/5, segun 100 reseñas. <br>
+                    Calificación que define nuestra excelencia.</p>
                 </div>
             </div>
             <div class="section-six--testimonials">
