--- a/html/politica.html
+++ b/html/politica.html
@@ -17,6 +17,23 @@
 </head>
 <body>
     
+    <div class="mobile-menu">
+        <section class="menu-mobile mobile">
+            <section class="menu-mobile--content">
+                <nav>
+                    <ul>
+                        <li class="homeMobile"><span></span>inicio</li>
+                        <li class="aboutUsMobile"><span></span>sobre nosotros</li>
+                        <li class="portfolioMobile"><span></span>portafolio</li>
+                        <li class="testimonialsMobile"><span></span>testimonios</li>
+                        <li class="contactUsMobile"><span></span>contáctanos</li>
+                    </ul>
+                </nav>
+            </section>
+            <span class="menu-mobile-icon"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" style="fill: #fff;"><path d="M21.842 6.218a1.977 1.977 0 0 0-.424-.628A1.99 1.99 0 0 0 20 5H8c-.297 0-.578.132-.769.359l-5 6c-.309.371-.309.91 0 1.281l5 6c.191.228.472.36.769.36h12a1.977 1.977 0 0 0 1.41-.582A1.99 1.99 0 0 0 22 17V7c0-.266-.052-.525-.158-.782zm-4.135 8.075-1.414 1.414L14 13.414l-2.293 2.293-1.414-1.414L12.586 12l-2.293-2.293 1.414-1.414L14 10.586l2.293-2.293 1.414 1.414L15.414 12l2.293 2.293z"></path></svg></span>
+        </section>
+    </div>
+
     <div class="header-one">
         <div>
             <p>(+57) 3115386102</p>
@@ -41,6 +58,7 @@
                     <li class="contactHeader">contáctanos</li>
                 </ul>
             </nav>
+            <span id="icon-menu"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" style="fill: #fff;"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg></span>
         </div>
     </header>
 
