actualización y finalización de la web, con los link y envio de información directa de la empresa

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="section-six--container">
                 <article>
                     <h3><span></span>Contact Us</h3>
-                    <p><span></span>Continental de transportes</p>
+                    <p><span></span>Continental de trasteos limitada</p>
                     <p><span></span>Info@continentaldetrasteos.com</p>
                     <p><span></span>601 633 4466 </p>
                     <p><span></span>601 563 0428</p>
@@ -216,6 +216,7 @@
                     <p><span></span>Transporte eficiente</p>
                     <p><span></span>Planificación</p>
                     <p><span></span>Embalaje</p>
+                    <p><span></span>Mudanzas a nivel local y nacional</p>
                 </article>
             </div>
         </footer>
