update of desing, create social media section and change of image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
     
-
     <!-- menu mobile -->
     
     <div class="mobile-menu">
@@ -50,7 +49,12 @@
             <div>
                 <p>Bogotá / Colombia</p>
             </div>
-        </div>
+            <div class="social-media">
+                <span class="facebook redSocial"></span>
+                <span class="instagram redSocial"></span>
+                <span class="whatsapp redSocial"></span>
+            </div>
+    </div>
         <header>
 
         <div class="header-two">
@@ -81,7 +85,7 @@
                 <p>Atención personalizada, transporte confiable. Tu mudanza perfecta comienza AQUÍ. ¡Contáctanos hoy!</p>
             </div>
             <picture class="section-one--picture">
-                <img src="./assets/img/mdweb (1).webp" alt="">
+                <img src="./assets/img/mdwebHeader.webp" alt="">
             </picture>
         </section>
     </section>
@@ -130,10 +134,10 @@
     <section class="section-three">
         <section class="section-three--container">
             <picture>
-                <img src="./assets/img/2.webp" alt="">
+                <img src="./assets/img/workinkg.webp" alt="">
             </picture>
             <div class="section-three--paragraf">
-                <h2>Explora Nuestros Servicios de <span>Mudanza y Transporte</span></h2>
+                <h2>Explora Nuestros Servicios de <span>Mudanza y Transporte.</span></h2>
                 <p>Explora la excelencia en cada mudanza. Echa un vistazo a nuestro portafolio  ¡Inspírate ahora!</p>
                 <button type="button" id="buttonQuorer">Servicios</button>
             </div>
