--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -46,6 +46,11 @@
             <div>
                 <p>Bogotá / Colombia</p>
             </div>
+            <div class="social-media">
+                <span class="facebook redSocial"></span>
+                <span class="instagram redSocial"></span>
+                <span class="whatsapp redSocial"></span>
+            </div>
         </div>
         <header>
 
